objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NSF Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Buying Signals</fullName>
        </values>
        <values>
            <fullName>Client Interaction</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Existing Customer Lead</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Quoted%2FFinal Negotiation</fullName>
        </values>
        <values>
            <fullName>Quoting Client</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Auditor Credentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed their mind due to required additional work/cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive counter quote.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor - Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor - Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not Secure Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure to complete contract negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of NSF Credibility &amp; Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Communicative/Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No NSF quote/submitted RFP due to contract restraints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service not offered by NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to arrange audit to desired timescale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Reason__c</fullName>
        <label>Closed Won Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Auditor Availability / Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor Credentials / Integrity Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account or Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client previously worked with NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International or Regional Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandated by Client (Specified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF BDG Interaction/Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Online / IT &amp; Data Management Capabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF vision/business insight/understanding of the client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other... (Define Below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price - Cost Competitiveness / Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of NSF Proposal/RFP/Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation from… (Text Field Below)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Meet Regulatory Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Win Specific Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unique NSF Service Capability / Service Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value of the NSF Mark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Closed_Won_Reason__c</fullName>
        <inlineHelpText>If selected Other for Closed Won reason</inlineHelpText>
        <label>Other Closed Won Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_from__c</fullName>
        <inlineHelpText>If Recommended From is chosen as Closed/Won reason.</inlineHelpText>
        <label>Recommendation From</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>NSF_Opportunity</fullName>
        <active>true</active>
        <businessProcess>NSF Sales Process</businessProcess>
        <label>NSF Opportunity</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Closed_Lost_Reason_Required</fullName>
        <active>true</active>
        <description>If an opportunity is moved to closed/lost stage, an opportunity closed/lost reason is required.</description>
        <errorConditionFormula>AND ( ISPICKVAL(StageName, &quot;Closed Lost&quot;), ISBLANK( TEXT( Closed_Lost_Reason__c )) )</errorConditionFormula>
        <errorMessage>Closed Lost Reason Required When Stage is Closed/Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL(StageName, &quot;Closed Won&quot;), ISBLANK( TEXT( Closed_Won_Reason__c )) )</errorConditionFormula>
        <errorMessage>Closed Won Reason Required When Stage is Closed/Won.</errorMessage>
    </validationRules>
</CustomObject>